--- a/compragamer/css/productos.css
+++ b/compragamer/css/productos.css
@@ -196,6 +196,7 @@
 .products-content {
     flex: 1;
     min-width: 0;
+    min-height: 400px;
 }
 
 .products-content .products-grid {
